Weiteres Refactoring & Kommentieren des Minigame-Systems